# EOT_simulator

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: demo.html  index.html  sim.html
docs/design/: rectangle_visualization.md
eot_simulator/: EKF.py  simulator.py  utils.py
eot_simulator/tracker/: EKF_RectangleTracker.py  LshapeFitting.py  RandomMatrixTracker_EllipsoidSurface.py
scripts/: evaluate_pmbm.py  generate_demo.py  generate_report.py
src/: EKF.py  simulator.py  utils.py
src/tracker/: EKF_RectangleTracker.py  GMPHD.py  GMPHD_RectangleTracker.py  LshapeFitting.py  RandomMatrixTracker_EllipsoidSurface.py  RectangleTracker.py
src/tracking/evaluation/: association.py  interactive.py  metrics.py  runner.py
src/tracking/ggiw/: ggiw_state.py  ggiw_update.py
src/tracking/measurement/: clustering.py  partition.py
src/tracking/pmbm/: bernoulli.py  hypothesis.py  pmbm_filter.py  ppp.py
src/tracking/shape/: rectangle_fitting.py  smoothing.py
tests/: test_EKF.py  test_GMPHD_RectangleTracker.py  test_RectangleTracker.py  test_utils.py
tests/tracking/: test_ggiw.py  test_interactive.py  test_lidar_scenarios.py  test_measurement.py  test_pmbm.py  test_ppp.py  test_shape.py
