[tool.poetry]
name = "eot-simulator"
version = "0.1.0"
description = ""
authors = ["yoshiri <yoshiyoshidetteiu@gmail.com>"]
readme = "README.md"
packages = [{include = "eot_simulator"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.0"
scipy = "^1.7.0"
matplotlib = "^3.4.0"
filterpy = "^1.4.5"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
